--- a/app/src/main/res/drawable/evaluative_card_upper_border.xml
+++ b/app/src/main/res/drawable/evaluative_card_upper_border.xml
@@ -3,19 +3,12 @@
     <item>
         <layer-list>
             <item>
-                <shape
-                    android:shape="rectangle">
+                <shape android:shape="rectangle">
                     <solid android:color="@color/app_primary" />
-                    <corners
-                        android:topLeftRadius="13dp"
-                        android:topRightRadius="13dp" />
-                    <stroke
-                        android:width="2.5dp"
-                        android:color="@color/app_primary" />
-                    <padding android:bottom="50dp"/>
+                    <corners android:topLeftRadius="14dp" android:topRightRadius="14dp" />
+                    <stroke android:width="2.5dp" android:color="@color/app_primary" />
                 </shape>
             </item>
-            <item android:drawable="@drawable/ic_baseline_more_vert_24" android:gravity="end"/>
         </layer-list>
     </item>
 </selector>
