--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,119 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/settings"
-        style="@style/form_header_style"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:text="@string/settings_header"
-        android:textSize="28dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/app_logo"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/settings"
+            app:srcCompat="@mipmap/ic_launcher_foreground" />
 
-    <Button
-        android:id="@+id/button_data_backup"
-        style="@style/form_button_style"
-        android:layout_width="286dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="60dp"
-        android:drawableRight="@drawable/ic_baseline_backup_24"
-        android:text="@string/backup_your_data"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.404"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        <TextView
+            android:id="@+id/settings"
+            style="@style/form_header_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/settings_header"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button_restore_data"
-        style="@style/form_button_style"
-        android:layout_width="286dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="12dp"
-        android:drawableRight="@drawable/ic_baseline_restore_24"
-        android:textAlignment="center"
-        android:text="@string/restore_your_data"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/button_data_backup"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/button_data_backup"
-        app:layout_constraintTop_toBottomOf="@+id/button_data_backup" />
+        <Button
+            android:id="@+id/button_data_backup"
+            style="@style/settings_option_style"
+            android:layout_marginTop="60dp"
+            android:drawableEnd="@drawable/ic_baseline_backup_24"
+            android:text="@string/backup_your_data"
+            app:layout_constraintBottom_toTopOf="@+id/button_restore_data"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/app_logo" />
 
-    <Button
-        android:id="@+id/button_logout"
-        style="@style/form_button_style"
-        android:layout_width="286dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:drawableRight="@drawable/ic_baseline_exit_to_app_24"
-        android:text="@string/logout"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/button_restore_data"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/button_restore_data"
-        app:layout_constraintTop_toBottomOf="@+id/button_restore_data" />
+        <Button
+            android:id="@+id/button_restore_data"
+            style="@style/settings_option_style"
+            android:drawableEnd="@drawable/ic_baseline_restore_24"
+            android:text="@string/restore_your_data"
+            app:layout_constraintBottom_toTopOf="@+id/button_logout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_data_backup" />
 
-    <Button
-        android:id="@+id/button_contact_us"
-        style="@style/form_button_style"
-        android:layout_width="286dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="12dp"
-        android:drawableRight="@drawable/ic_baseline_contacts_24"
-        android:text="@string/contact_us"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/button_logout"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/button_logout"
-        app:layout_constraintTop_toBottomOf="@+id/button_logout" />
+        <Button
+            android:id="@+id/button_logout"
+            style="@style/settings_option_style"
+            android:drawableEnd="@drawable/ic_baseline_exit_to_app_24"
+            android:text="@string/logout"
+            app:layout_constraintBottom_toTopOf="@+id/button_contact_us"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_restore_data" />
 
-    <Button
-        android:id="@+id/button_about_app"
-        style="@style/form_button_style"
-        android:layout_width="286dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="12dp"
-        android:drawableRight="@drawable/ic_baseline_info_24"
-        android:text="@string/about_app"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/button_contact_us"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/button_contact_us"
-        app:layout_constraintTop_toBottomOf="@+id/button_contact_us" />
+        <Button
+            android:id="@+id/button_contact_us"
+            style="@style/settings_option_style"
+            android:drawableEnd="@drawable/ic_baseline_contacts_24"
+            android:text="@string/contact_us"
+            app:layout_constraintBottom_toTopOf="@+id/button_about_app"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_logout" />
 
-    <Button
-        android:id="@+id/button_about_us"
-        style="@style/form_button_style"
-        android:layout_width="286dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="12dp"
-        android:drawableRight="@drawable/ic_baseline_people_24"
-        android:text="@string/about_us"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/button_about_app"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/button_about_app"
-        app:layout_constraintTop_toBottomOf="@+id/button_about_app" />
+        <Button
+            android:id="@+id/button_about_app"
+            style="@style/settings_option_style"
+            android:drawableEnd="@drawable/ic_baseline_info_24"
+            android:text="@string/about_app"
+            app:layout_constraintBottom_toTopOf="@+id/button_about_us"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_contact_us" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="192dp"
-        android:layout_height="143dp"
-        android:layout_marginTop="48dp"
-        app:layout_constraintEnd_toEndOf="@+id/settings"
-        app:layout_constraintStart_toStartOf="@+id/settings"
-        app:layout_constraintTop_toBottomOf="@+id/settings"
-        app:srcCompat="@mipmap/ic_launcher_foreground" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/button_about_us"
+            style="@style/settings_option_style"
+            android:layout_marginBottom="16dp"
+            android:drawableEnd="@drawable/ic_baseline_people_24"
+            android:text="@string/about_us"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_about_app" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
